# exercise

./: CMakeLists.txt
tests/: CMakeLists.txt  test_philosofiers.cpp
